salesforce_sfdx/main/default/objects/Quote/fields/Otter_Approval_Level_Description__c.field-meta.xml
<CustomField>
    <fullName>Otter_Approval_Level_Description__c</fullName>
    <description>Summary of required approval level</description>
    <formula>case( Otter_Approval_Level_Required__c,
		"Level 1", "Sales Manager",
		"Level 2", "Sales Manager, Product Manager",
		"Level 3", "Sales Manager, Product Manager, Finance Manager",
		""
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Summary of required approval level</inlineHelpText>
    <label>Approval Level Description</label>
    <type>Text</type>
</CustomField>