salesforce_sfdx/main/default/objects/Quote/fields/Otter_One_Time_Margin_Guidance__c.field-meta.xml
<CustomField>
    <fullName>Otter_One_Time_Margin_Guidance__c</fullName>
    <defaultValue>15.00</defaultValue>
    <inlineHelpText>Suggested baseline one time margin value. A quote that does not meet the guidelines is generally required to follow a special pricing review process</inlineHelpText>
    <label>One Time Margin Guidance, %</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>