salesforce_sfdx/main/default/objects/Quote/fields/Otter_One_Time_Margin_Validation__c.field-meta.xml
<CustomField>
    <fullName>Otter_One_Time_Margin_Validation__c</fullName>
    <formula>if(AND(NOT(ISBLANK(Otter_One_Time_Margin_Pct__c)), NOT(ISBLANK(Otter_One_Time_Margin_Guidance__c))),
if(
   Otter_One_Time_Margin_Pct__c &lt; Otter_One_Time_Margin_Guidance__c, 
   &quot;❌&quot;, 
   &quot;✔&quot;
),
			&quot;No margin data available yet&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A red flag indicates that the quote does not meet margin guidelines</inlineHelpText>
    <label>One Time Margin Validation</label>
    <type>Text</type>
</CustomField>