salesforce_sfdx/main/default/objects/Quote/fields/Otter_Quote_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Otter_Quote_Total_Cost__c</fullName>
    <formula>if (and(not(isblank(vlocity_cmt__NumberOfContractedMonths__c)), vlocity_cmt__NumberOfContractedMonths__c &lt;> 0), 
  vlocity_cmt__NumberOfContractedMonths__c * vlocity_cmt__EffectiveRecurringCostTotal__c + vlocity_cmt__EffectiveOneTimeCostTotal__c, 
  vlocity_cmt__EffectiveRecurringCostTotal__c + vlocity_cmt__EffectiveOneTimeCostTotal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total quote cost for a provider over the period of contract duration. If contract duration is not specified, it is assumed 1 month by default</inlineHelpText>
    <label>Quote Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>