salesforce_sfdx/main/default/objects/Quote/fields/Otter_Quote_Total_Margin__c.field-meta.xml
<CustomField>
    <fullName>Otter_Quote_Total_Margin__c</fullName>
    <description>Quote Total Charge - Quote Total Cost</description>
    <formula>Otter_Quote_Total_Charge__c -  Otter_Quote_Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Quote Total Charge - Quote Total Cost</inlineHelpText>
    <label>Quote Total Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>