salesforce_sfdx/main/default/objects/Quote/fields/Otter_Quote_Total_Margin_Guidance_Pct__c.field-meta.xml
<CustomField>
    <fullName>Otter_Quote_Total_Margin_Guidance_Pct__c</fullName>
    <defaultValue>25.00</defaultValue>
    <description>Quote total margin guidance. If a quote does not meet the guidance requirement, it generally needs to follow a pricing review process</description>
    <inlineHelpText>Quote total margin guidance. If a quote does not meet the guidance requirement, it generally needs to follow a pricing review process</inlineHelpText>
    <label>Quote Total Margin Guidance, %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>