salesforce_sfdx/main/default/objects/Quote/fields/Otter_Quote_Total_Margin_Pct__c.field-meta.xml
<CustomField>
    <fullName>Otter_Quote_Total_Margin_Pct__c</fullName>
    <description>Quote Total Margin / Quote Total Charge</description>
    <formula>Otter_Quote_Total_Margin__c /  Otter_Quote_Total_Charge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Quote Total Margin / Quote Total Charge</inlineHelpText>
    <label>Quote Total Margin, %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>