salesforce_sfdx/main/default/objects/Quote/fields/Otter_Quote_Total_Margin_Validation__c.field-meta.xml
<CustomField>
    <fullName>Otter_Quote_Total_Margin_Validation__c</fullName>
    <description>Indicates either the quote meets (or not) the quote margin guidelines</description>
    <formula>if(AND(NOT(ISBLANK(Otter_Quote_Total_Margin_Pct__c)), NOT(ISBLANK(Otter_Quote_Total_Margin_Guidance_Pct__c))),
  if(Otter_Quote_Total_Margin_Pct__c &lt; Otter_Quote_Total_Margin_Guidance_Pct__c, "❌", "✔"), 
  "No margin data available yet")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates either the quote meets (or not) the quote margin guidelines</inlineHelpText>
    <label>Quote Total Margin Validation</label>
    <type>Text</type>
</CustomField>