salesforce_sfdx/main/default/objects/Quote/fields/Otter_Recurring_Margin_Guidance__c.field-meta.xml
<CustomField>
    <fullName>Otter_Recurring_Margin_Guidance__c</fullName>
    <defaultValue>25.00</defaultValue>
    <inlineHelpText>Suggested baseline recurring margin value. A quote that does not meet the guidelines is generally required to follow a special pricing review process</inlineHelpText>
    <label>Recurring Margin Guidance, %</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>