salesforce_sfdx/main/default/objects/Quote/fields/Otter_Recurring_Margin_Pct__c.field-meta.xml
<CustomField>
    <fullName>Otter_Recurring_Margin_Pct__c</fullName>
    <formula>Otter_Recurring_Margin__c / vlocity_cmt__EffectiveRecurringTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Recurring margin divided by recurring price</inlineHelpText>
    <label>Recurring Margin, %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>