salesforce_sfdx/main/default/objects/Quote/fields/Otter_Recurring_Margin_Validation__c.field-meta.xml
<CustomField>
    <fullName>Otter_Recurring_Margin_Validation__c</fullName>
    <formula>if(AND(NOT(ISBLANK(Otter_Recurring_Margin_Pct__c)), NOT(ISBLANK(Otter_Recurring_Margin_Guidance__c))),
if(
   Otter_Recurring_Margin_Pct__c &lt; Otter_Recurring_Margin_Guidance__c, 
   "❌", 
   "✔"
),
            "No margin data available yet")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A red icon indicates that the quote does not meet the quote margin guidelines</inlineHelpText>
    <label>Recurring Margin Validation</label>
    <type>Text</type>
</CustomField>